--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Merriweather:wght@400;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/poster.css">
 </head>
+
 <body>
-    <h1>How </h1>
-    
+    <header>
+        <div class="headd">
+            <h3>Happy New Year</h3>
+            <h2>New Year Party <br>Celebration</h2>
+        </div>
+    </header>
+    <main>
+        <section>
+        <div class="off65">
+            <div class="o65">
+                <h2 class="oo">65% OFF</h2>
+                <h4 class="ooo">OUR HOLIDAY DEALS ARE BETTER</h4>
+                <h2 class="oooo">ALL CATEGORIES</h2>
+                <img src="img/New Year Photo.png" alt="">
+
+            </div>
+            </div>
+        </section>
+        <section>
+            <div class="welcome">
+                <div>
+                    <h2 class="welcome-title">Welcome to midnight party</h2>
+                    <h4 class="welcome-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h4>
+                    <h3 class="join">Join Now</h3>
+                </div>
+                <div>
+                    <img class="wel"src="img/Group 70.png" alt="">
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
