--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </header>
     <main>
         <section>
-        <div class="off65">
-            <div class="o65">
-                <h2 class="oo">65% OFF</h2>
-                <h4 class="ooo">OUR HOLIDAY DEALS ARE BETTER</h4>
-                <h2 class="oooo">ALL CATEGORIES</h2>
-                <img src="img/New Year Photo.png" alt="">
+            <div class="off65">
+                <div class="o65">
+                    <h2 class="oo">65% OFF</h2>
+                    <h4 class="ooo">OUR HOLIDAY DEALS ARE BETTER</h4>
+                    <h2 class="oooo">ALL CATEGORIES</h2>
+                    <img src="img/New Year Photo.png" alt="">
 
-            </div>
+                </div>
             </div>
         </section>
         <section>
@@ -41,10 +41,23 @@
                     <h3 class="join">Join Now</h3>
                 </div>
                 <div>
-                    <img class="wel"src="img/Group 70.png" alt="">
+                    <img class="wel" src="img/Group 70.png" alt="">
                 </div>
             </div>
 
+        </section>
+        <section>
+            <div class="address">
+                <div class="add">
+                    <p>
+                        <span class="cr">Place:</span> New Park Hotel<br><span class="cr">Date:</span> 31 December Night 2023<br><span class="cr">Time:</span> Evening 7.30 pm to 12.30 am<br>
+                    </p>
+
+                </div>
+                <div>
+                    <button class="btn"><span class="br">Join Now</span></button>
+                </div>
+            </div>
         </section>
 
     </main>
