--- a/index.html
+++ b/index.html
@@ -48,15 +48,124 @@
         </section>
         <section>
             <div class="address">
-                <div class="add">
-                    <p>
-                        <span class="cr">Place:</span> New Park Hotel<br><span class="cr">Date:</span> 31 December Night 2023<br><span class="cr">Time:</span> Evening 7.30 pm to 12.30 am<br>
-                    </p>
+                <div class="addd">
+                    <div class="add">
+                        <p>
+                            <span class="cr">Place:</span> New Park Hotel<br><span class="cr">Date:</span> 31 December
+                            Night
+                            2023<br><span class="cr">Time:</span> Evening 7.30 pm to 12.30 am<br>
+                        </p>
+
+                    </div>
+                    <div>
+                        <button class="btn"><span class="br">Join Now</span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="comingsoon">
+                <div class="left">
+                    <h2 class="comingsoon-title">NEW BEST OFFER</h2>
+                    <h2 class="comm">Coming Soon</h2>
+                    <p class="comingsoon-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="middle">
+                    <div class="middle1">
+                        <img src="img/Ellipse 1.png" alt="">
+                    </div>
 
                 </div>
-                <div>
-                    <button class="btn"><span class="br">Join Now</span></button>
+                <div class="right">
+                    <h2 class="co2024">2024</h2>
+                    <p class="comingsoon-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="img/Group 96.png" alt="">
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="holiday">
+                <div class="holi">
+                    <div class="likha">
+                        <h4 class="cap">WHAT IS FUNCTIONAL</h4>
+                        <h1 class="hol">Holidays <span class="holl">Sale 50%</span></h1>
+                        <p class="holcap">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                            quam id fermentum amet amet sit consectetur.</p>
+                    </div>
+                    <div class="pic">
+                        <div>
+                            <img class="img1" src="img/Group 75.png" alt="">
+                        </div>
+                        <div>
+                            <img class="img2" src="img/Group 44.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+        <section>
+            <div class="gifts">
+                <div class="giftts">
+                    <h4 class="giftcaption">THE BEST GIFTS</h4>
+                    <h2 class="gifttitle">Our Awesome Portfolio</h2>
+                    <p class="giftcap">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <div class="pho">
+                        <div class="first">
+                            <a href="">
+                                <img class="im" src="img/Rectangle 3.png" alt="">
+                            </a>
+
+                            <a href="">
+                                <img class="im" src="img/Rectangle 4.png" alt="">
+                            </a>
+                            <a href="">
+                                <img class="im" src="img/Rectangle 5.png" alt="">
+                            </a>
+
+
+
+                        </div>
+                        <div class="second">
+                            <a href="">
+                                <img class="im" src="img/Rectangle 6.png" alt="">
+                            </a>
+                            <a href="">
+                                <img class="im" src="img/Rectangle 7.png" alt="">
+                            </a>
+                            <a href="">
+                                <img class="im" src="img/Rectangle 8.png" alt="">
+                            </a>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="subscribe">
+                <img class="subimg" src="img/Group 61.png" alt="">
+                <h2 class="subtitle">Subscribe Newsletter</h2>
+                <h4 class="subdes">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h4>
+                <div class="subbtn">
+                    <div class="tog">
+                        <input type="email" class="from" placeholder="User@gmail.com" />
+                        <button class="btn-pri" type="button" >
+                            Subscribe
+                        </button>
+                    </div>
+                </div>
+
+
             </div>
         </section>
 
