--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 <div class="subbtn">
                     <div class="tog">
                         <input type="email" class="from" placeholder="User@gmail.com" />
-                        <button class="btn-pri" type="button" >
-                            Subscribe
+                        <button class="btn-pri" type="button">
+                            Button
                         </button>
                     </div>
                 </div>
@@ -171,6 +171,46 @@
 
     </main>
     <footer>
+        <div class="foot">
+            <div class="one">
+                <div class="one1">
+                    <p class="footp">44, Big Building Roosevelt Street
+                        <br> Beach Gardens Florida 33410
+                    </p>
+
+                </div>
+                <div class="one2">
+                    <div class="one21">
+                        <div><img class="imo" src="img/Call.png" alt=""></div>
+                        <div>
+                            <p class="footp"> +00 123 584 124</p>
+                        </div>
+
+                    </div>
+                    <div class="one22">
+                        <div><img class="imo" src="img/Website.png" alt=""></div>
+                        <div>
+                            <p class="footp">www.website.com</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <hr>
+            <div class="social">
+                <img src="img/Facebook.png" alt=""><img src="img/Instagram.png" alt=""><img src="img/Twitter.png"
+                    alt=""><img src="img/Linkedin.png" alt="">
+
+            </div>
+            <hr>
+            <div class="last">
+                <h2 class="footp">2017, All Rights Reserved.</h2>
+                <h2 class="footp">Unsubscribe</h2>
+
+            </div>
+        </div>
 
     </footer>
 
